jwt token authorization infrastructure is done

--- a/WebAPI1/appsettings.json
+++ b/WebAPI1/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "www.ali.com",
+    "Issuer": "www.ali.com",
+    "AccessTokenExpiration": 2,
+    "SecurityKey": "mysecretkeymysecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
