--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.4.0" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="4.5.0" />
+    <PackageReference Include="FluentValidation" Version="8.5.0" />
   </ItemGroup>
 
   <ItemGroup>
